RESOLVED FIXED255001
REGRESSION(262547@main): Multiple layout tests crash when decoding a null ShareableBitmapHandle
https://bugs.webkit.org/show_bug.cgi?id=255001
Summary REGRESSION(262547@main): Multiple layout tests crash when decoding a null Sha...
Said Abou-Hallawa
Reported 2023-04-04 12:26:29 PDT
The change 262547@main adds the assertion `ASSERT(!m_size.isEmpty());` in all the ShareableBitmapConfiguration constructors. However one of them is called when decoding a null ShareableBitmapHandle in UIProcess which has m_size.isEmpty() true. The corresponding ShareableBitmapConfiguration was created with the default constructor in WebProcess.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-04 12:45:03 PDT
Said Abou-Hallawa
Comment 2 2023-04-04 12:53:40 PDT
Simon Fraser (smfr)
Comment 3 2023-04-04 15:15:04 PDT
*** Bug 255009 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2023-04-04 16:57:49 PDT
Committed 262599@main (05a6289e70ae): <https://commits.webkit.org/262599@main> Reviewed commits have been landed. Closing PR #12389 and removing active labels.
Vitaly Dyackhov
Comment 5 2023-04-05 03:49:17 PDT
*** Bug 255025 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.