REGRESSION(262547@main): Multiple layout tests crash when decoding a null ShareableBitmapHandle https://bugs.webkit.org/show_bug.cgi?id=255001 rdar://107625511

Reviewed by Simon Fraser.

Remove an assertion from one of the constructors of ShareableBitmapConfiguration
so the ones which were created by the default constructor can be decoded.

Also this uncovered a bug in WebPageProxy::platformCloneAttachment() when the
thumbnail size is empty. So this should bail out.

* Source/WebKit/Shared/ShareableBitmap.cpp:
(WebKit::ShareableBitmapConfiguration::ShareableBitmapConfiguration):
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::convertPlatformImageToBitmap):

Canonical link: https://commits.webkit.org/262599@main